@@ -22,6 +22,8 @@ Revision history for DBIx::Class
           notably on_connect* failures now properly abort the entire connect
         - Fix incorrect SQL generated with invalid {rows} on complex resultset
           operations, generally more robust handling of rows/offset attrs
+        - Fix incorrect $storage state on unexpected RDBMS disconnects and
+          other failure events, preventing clean reconnection (RT#110429)
         - Make sure exception objects stringifying to '' are properly handled
           and warned about (GH#15)
         - Fix corner case of stringify-only overloaded objects being used in
